--- a/_config.yml
+++ b/_config.yml
@@ -15,33 +15,33 @@ timezone: Asia/Seoul
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # --------------------------
-title: Chirpy                          # the main title
+title: 인간 개발자 김덕휘                     # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: 레벨 업 중입니다  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
-  bootstrap Jekyll theme with responsive web design
-  and focuses on text presentation.
+  레벨 업 레벨 업 레벨 업 레벨 업 레벨 업 레벨 업 
+  레벨 업 레벨 업 레벨 업 레벨 업 레벨 업 레벨 업 
+  레벨 업 레벨 업 레벨 업 레벨 업 레벨 업 레벨 업 
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://thekeykim.github.io'
 
-author: your_full_name                  # change to your full name
+author: DeokHwi, Kim                  # change to your full name
 
 github:
-  username: github_username             # change to your github username
+  username: TheKeyKim           # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: -           # change to your twitter username
 
 social:
-  name: your_full_name                  # it will shows as the copyright owner in Footer
-  email: example@doamin.com             # change to your email address
+  name: 김덕휘                  # it will shows as the copyright owner in Footer
+  email: df1097@naver.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    #- https://twitter.com/      # change to your twitter homepage
+    - https://github.com/thekeykim       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
