--- a/_config.yml
+++ b/_config.yml
@@ -15,14 +15,12 @@ timezone: Asia/Seoul
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # --------------------------
-title: 인간 개발자 김덕휘                     # the main title
+title: Human Developer DeokHwi Kim                    # the main title
 
-tagline: 레벨 업 중입니다  # it will display as the sub-title
+tagline: level up  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  레벨 업 레벨 업 레벨 업 레벨 업 레벨 업 레벨 업 
-  레벨 업 레벨 업 레벨 업 레벨 업 레벨 업 레벨 업 
-  레벨 업 레벨 업 레벨 업 레벨 업 레벨 업 레벨 업 
+  levelup
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://thekeykim.github.io'
@@ -36,7 +34,7 @@ twitter:
   username: -           # change to your twitter username
 
 social:
-  name: 김덕휘                  # it will shows as the copyright owner in Footer
+  name: thekeykim                 # it will shows as the copyright owner in Footer
   email: df1097@naver.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
