--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ github:
   username: TheKeyKim           # change to your github username
 
 twitter:
-  username: -           # change to your twitter username
+  username: TheKeyKim           # change to your twitter username
 
 social:
   name: 김덕휘                  # it will shows as the copyright owner in Footer
