--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ social:
   email: df1097@naver.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    #- https://twitter.com/      # change to your twitter homepage
+    - https://twitter.com/      # change to your twitter homepage
     - https://github.com/thekeykim       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
